--- a/views/verified.jade
+++ b/views/verified.jade
@@ -1,4 +1,4 @@
 extends layout
 
 block content
-  h1 Good job! You have successfully veried your email.
+  h1 Good job! You have successfully verified your email.
